feat(apps): add djangotoolbar, apps/app_1 et app_2
ajout de djangotoolbar
creation dossier des applis : apps/
app_1 mis sous apps/ mais problème avec app_1.models.py:
                RuntimeError: Model class apps.app.models.Article doesn't declare an explicit app_label and isn't in an application in INSTALLED_APPS.
app_2 créée et mise sous projet/ (pas sous apps/) et app_2.models.py OK
tests mis en place et OK pour apps/app_1 et app_2

--- a/projet/templates/base.html
+++ b/projet/templates/base.html
@@ -10,13 +10,13 @@
     </head>
     <body>
             <header>
-                <p> ceci est l'en-tête </p>
+                <p> ceci est l'en-tête (bleu) </p>
              </header>
             <main>
                 {% block content %}{% endblock %}
             </main>
             <footer>
-               <p>Copyright &copy 2021 Bibi</p>
+               <p>Copyright &copy 2021 Bibi (bleu) </p>
             </footer>
     </body>
 </html>
