--- a/projet/templates/base.html
+++ b/projet/templates/base.html
@@ -16,7 +16,7 @@
                 {% block content %}{% endblock %}
             </main>
             <footer>
-               <p>Copyright &copy 2021 Bibi (bleu) </p>
+               <p>Copyright &copy 2021 Bibi (blanc) </p>
             </footer>
     </body>
 </html>
